# spin-animal-facts

./: Cargo.toml  README.md  spin.deny.toml  spin.toml
.spin/logs/: spin-animal-facts_stdout.txt
animal-facts-app/: Cargo.toml
animal-facts-app/src/: lib.rs
animal-facts-dep/: Cargo.toml
animal-facts-dep/src/: bindings.rs  lib.rs
animal-facts-dep/wit/: world.wit
cat-facts-app/: Cargo.toml
cat-facts-app/src/: lib.rs
cat-facts-dep/: Cargo.toml
cat-facts-dep/src/: bindings.rs  lib.rs
cat-facts-dep/wit/: world.wit
